--- a/class/index.html
+++ b/class/index.html
@@ -47,6 +47,7 @@
   <div class="button" onclick="sortByAttendance()">Sort by Attendance</div>
   <div class="button" onclick="sortByGender()">Sort by Boy/Girl</div>
   <div class="button" onclick="sortByBday()">Sort by Birthday</div>
+  <div class="button" onclick="sortByDateAdded()">Sort by Date Added</div>
   <div class="button" onclick="sortByNotes()">Sort by Notes</div>
 </div>
 
