--- a/class/index.html
+++ b/class/index.html
@@ -88,10 +88,10 @@
             <div class="backButton" onclick="goHome()">f</div>
           </div>
           <div class="button" id="promotionButton" onclick="loadPromotions(); pop(['alertsPop'],['customListPop'])">Promotions</div>
-          <div class="button" id="birthdayButton" onclick="loadBdays(); pop(['alertsPop'],['customListPop'])">Birthdays</div>
+          <div class="button" id="bdayButton" onclick="loadBdays(); pop(['alertsPop'],['customListPop'])">Birthdays</div>
           <div class="button" id="photosNeededButton" onclick="loadNeededPhotos(); pop(['alertsPop'],['customListPop'])">Missing Photos</div>
           <div class="button" id="emailsNeededButton" onclick="loadNeededEmails(); pop(['alertsPop'],['customListPop']); _array = ['customListPop']">Missing Emails</div>
-          <div class="button" id="birthdaysNeededButton" onclick="loadNeededBirthdays(); pop(['alertsPop'],['customListPop']); _array = ['customListPop']">Missing Birthdays</div>
+          <div class="button" id="bdaysNeededButton" onclick="loadNeededbdays(); pop(['alertsPop'],['customListPop']); _array = ['customListPop']">Missing Birthdays</div>
       </div>
 </div>
 
@@ -865,12 +865,12 @@
     <p>fullName: <span id="fullName"></span></p>
     <p>gender: <span id="gender"></span></p>
     <p>dateAdded: <span id="dateAdded"></span></p>
-    <p>birthdayMonth: <span id="birthdayMonth"></span></p>
-    <p>birthdayDate: <span id="birthdayDate"></span></p>
-    <p>birthdayNumber: <span id="birthdayNumber"></span></p>
-    <p>birthday: <span id="birthday"></span></p>
-    <p>hasBirthday: <span id="hasBirthday"></span></p>
-    <p>birthdayDone: <span id="birthdayDone"></span></p>
+    <p>bdayMonth: <span id="bdayMonth"></span></p>
+    <p>bdayDate: <span id="bdayDate"></span></p>
+    <p>bdayNumber: <span id="bdayNumber"></span></p>
+    <p>bday: <span id="bday"></span></p>
+    <p>hasbday: <span id="hasbday"></span></p>
+    <p>bdayDone: <span id="bdayDone"></span></p>
     <p>email: <span id="email"></span></p>
     <p>photo: <span id="photo"></span></p>
     <p>notes: <span id="notes"></span></p>
