--- a/class/index.html
+++ b/class/index.html
@@ -811,7 +811,7 @@
     <div class="backButton" onclick="pop(['promoPop'],['missionsPop','studentPop'])">f</div>
     <div class="homeButton" onclick="goHome()">5</div>
   </div>
-  <p>Promotion:</p>
+  <p id="promoPopLabel">Promotion</p>
   <div>
     <div id="promoInsignia"></div>
   </div>
