--- a/class/students.html
+++ b/class/students.html
@@ -816,12 +816,12 @@
     <td id="calendarLesson9"></td>
     <td id="calendarMemory9"></td>
     </tr>
-    <tr id="calendarRow10"></tr>
+    <tr id="calendarRow10">
     <td id="calendarDate10"></td>
     <td id="calendarLesson10"></td>
     <td id="calendarMemory10"></td>
     </tr>
-    <tr id="calendarRow11"></tr>
+    <tr id="calendarRow11">
     <td id="calendarDate11"></td>
     <td id="calendarLesson11"></td>
     <td id="calendarMemory11"></td>
