--- a/class/index.html
+++ b/class/index.html
@@ -868,7 +868,7 @@
 </div>
 
 <div id="studentPropertiesPop" class="pop">
-  <div id="studentData">
+  <div id="studentProperties">
     <p>first: <span id="first"></span></p>
     <p>last: <span id="last"></span></p>
     <p>full: <span id="full"></span></p>
@@ -889,6 +889,7 @@
     <p>attendance: <span id="attendance"></span></p>
     <p>amAtt: <span id="amAtt"></span></p>
     <p>pmAtt: <span id="pmAtt"></span></p>
+    <p>promoTally: <span id="promoTally"></span></p>
     <p>promoted: <span id="promoted"></span></p>
     <p>promotionNum: <span id="promotionNum"></span></p>
     <p>drawing: <span id="drawing"></span></p>
